# SystemsExercise

./: CMakeLists.txt  Client.cpp  Client.h  DiseaseStatistics.cpp  DiseaseStatistics.h  GenericHashTable.cpp  GenericHashTable.h  GenericlLinkedList.cpp  GenericlLinkedList.h  Master.cpp  Master.h  MyString.cpp  MyString.h  NamedPipe.cpp  NamedPipe.h  NamedPipeInOut.cpp  NamedPipeInOut.h  PatientEntry.cpp  PatientEntry.h  PipesHashTable.cpp  PipesHashTable.h  README.md  RedBlackTrees.cpp  RedBlackTrees.h  SendReceiveProtocol.cpp  SendReceiveProtocol.h  Server.cpp  Server.h  StatisticsElement.cpp  StatisticsElement.h  Worker.cpp  Worker.h  main.cpp  mainMaster.cpp  mainServer.cpp  mainWorker.cpp  queries.txt
input_dir/Bhutan/: 10-3-2019  11-12-2020  16-3-2020  16-8-2019  18-2-2020  2-12-2020  29-8-2020  3-10-2019  30-7-2019  5-3-2019
input_dir/Cyprus/: 13-10-2020  13-2-2019  15-11-2019  15-4-2019  22-12-2020  22-9-2020  23-5-2019  28-11-2019  4-3-2020  7-8-2019
input_dir/Finland/: 11-10-2019  16-9-2020  24-4-2020  28-9-2019  3-11-2020  30-5-2019  30-5-2020  6-7-2019  7-11-2020  8-11-2020
input_dir/India/: 1-7-2020  19-11-2020  22-3-2020  24-6-2020  24-7-2019  26-12-2020  30-4-2019  4-11-2019  5-3-2020  7-8-2020
input_dir/Jordan/: 10-2-2020  11-10-2019  20-7-2020  21-9-2020  28-4-2019  4-1-2020  4-12-2020  6-6-2019  6-9-2020  7-3-2020
input_dir/Mauritania/: 1-11-2020  14-6-2020  20-12-2020  26-11-2020  29-1-2019  29-4-2020  31-7-2020  5-3-2019  6-9-2019  9-4-2020
input_dir/Mozambique/: 15-1-2020  18-2-2019  23-9-2019  26-9-2020  27-3-2020  29-7-2020  29-9-2019  (+3 more)
(+1430 files in other folders)
